loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: value foreach is not a member of Int
for (i <- 3)
          ^LoopStairs:12: error: value foreach is not a member of Int
for (i <- 4)
          ^