loopfor.LoopStairs.scala.code
for (i <- 3)
	avance()
gauche()

for (i <- 1 to 8)
  avance()
  droite()
  avance()
  gauche()

droite()
for (i <- 4)
	avance()